src/app/index.css
@import "tailwindcss";

@theme {
  --animate-menu-drop-down: menu-drop-down 0.3s ease-in-out;
  @keyframes menu-drop-down {
    0% {
      opacity: 0;
      height: 0;
    }
    100% {
      opacity: 1;
      height: calc(var(--spacing) * 10);
    }
  }

  --animate-login-fade-in: login-fade-in 0.5s ease-out;
  @keyframes login-fade-in {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
}

/******************************* COMMON *******************************/

div.page-container {
  @apply h-screen overflow-hidden;
  @apply flex flex-col items-center;
  @apply bg-white;
}

nav.page-head {
  @apply flex flex-col items-center justify-center w-full;
  @apply bg-indigo-600 border-b border-indigo-500;
}

div.page-head-logo-div {
  @apply flex w-full sm:w-[80%] mt-2 sm:mt-5 mb-2 sm:mb-5;
}

div.page-head-menu-div {
  @apply flex items-center justify-evenly sm:justify-end flex-row;
  @apply w-full sm:w-[80%] mb-2;
  @apply animate-menu-drop-down;
}

a.page-head-logo-link {
  @apply flex flex-shrink-0 items-center ml-1 sm:ml-0;
}

img.page-head-logo-img {
  @apply h-10 w-auto;
}

span.page-head-logo-text {
  @apply md:block text-white text-2xl font-bold ml-2;
}

section.menu-section {
  @apply sm:ml-3 mt-0.5 sm:mt-0;
}

section.menu-section form.menu-item-form {
  @apply flex items-center justify-end;
}

section.menu-section div.menu-item-div {
  @apply flex items-center justify-center gap-x-6;
}

section.menu-section button.menu-item-button {
  @apply rounded-md w-20 sm:w-30 px-3 py-2 shadow-md mx-1 sm:mx-0;
  @apply text-sm font-semibold bg-indigo-600;
  @apply bg-indigo-100 hover:bg-indigo-200 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-100;
}

div.page-content {
  @apply static flex items-center justify-center h-full w-full sm:w-[80%];
  @apply bg-white;
}

/****************************** WIDGETS *******************************/

div.data-card-monitor .select-small .react-select__control {
  @apply min-w-16;
}

div.data-card-monitor .select-big .react-select__control {
  @apply min-w-32;
}

div.data-card-monitor .react-select__control {
  @apply m-1 px-1.5 py-2 relative;
  @apply rounded-lg text-sm bg-white border-0;
}

div.data-card-monitor .react-select__control--is-focused {
  @apply ring-2 ring-black
}

div.data-card-monitor .react-select__control--is-disabled {
  @apply opacity-50 pointer-events-none;
}

div.data-card-monitor .react-select__value-container {
  @apply p-0;
}

div.data-card-monitor .react-select__single-value {
  @apply text-black;
}

div.data-card-monitor .react-select__indicators {
  @apply flex items-center shrink-0;
}

div.data-card-monitor .react-select__indicator {
  @apply pl-1 pr-0 py-0;
}

div.data-card-monitor .react-select__menu {
  @apply mt-0.5;
}

/***************************** LOGIN PAGE *****************************/

section#login-section {
  @apply absolute top-0;
  @apply flex items-center justify-center h-full w-full;
  @apply bg-black/30;
  @apply animate-login-fade-in;
}

section#login-section div.login-card {
  @apply flex flex-col justify-center;
  @apply w-7/8 sm:w-1/2 h-2/5 mb-20;
  @apply bg-white;
  @apply border border-black [box-shadow:10px_10px_black];
}

section#login-section h2.login-title {
  @apply mb-5 text-center text-2xl/9 font-bold tracking-tight text-gray-900;
}

section#login-section form.login-form {
  @apply flex items-center justify-center;
}

section#login-section div.login-field-div {
  @apply flex items-center rounded-md my-3 pl-3;
  @apply outline-1 -outline-offset-1 outline-gray-300 focus-within:outline-2 focus-within:outline-indigo-600;
}

section#login-section input.login-field {
  @apply block min-w-0 grow py-1.5 pr-3 pl-1;
  @apply sm:text-sm/6 text-base text-gray-900 placeholder:text-gray-400;
  @apply focus:outline-none;
}

section#login-section div.login-submit-div {
  @apply mt-7 flex items-center justify-center gap-x-6;
}

section#login-section button.login-submit {
  @apply rounded-md w-65 sm:w-75 px-3 py-2 shadow-md;
  @apply text-sm font-semibold text-white;
  @apply bg-indigo-600 hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600;
}

section#login-section div.demo-card {
  @apply w-full mt-6;
  @apply flex items-center justify-center;
}

div.demo-card form.demo-form {
  @apply h-10;
  @apply flex items-center justify-center;
}

form.demo-form input {
  display: none;
}

form.demo-form p {
  @apply text-sm;
}

form.demo-form p button {
  @apply font-semibold underline text-indigo-600 hover:text-indigo-400 hover:cursor-pointer;
  @apply ml-0.5 mr-0.5;
}

/***************************** DATA PAGE ******************************/

section#data-section {
  @apply w-full h-full;
}

section#data-section p.spinner-loading {
  @apply mt-1;
  @apply text-sm font-semibold text-indigo-600;
}

section#data-section div.data-cards-div {
  @apply grid grid-cols-1 xl:grid-cols-2 gap-10;
  @apply my-5 sm:my-2 mx-5 sm:mx-0;
}

section#data-section div.data-card {
  @apply bg-gray-200 p-5 rounded-xl shadow-lg relative;
}

section#data-section h3.data-card-title {
  @apply text-center text-lg sm:text-2xl uppercase font-bold my-2;
}

section#data-section div.data-card-items {
  @apply my-2;
}

section#data-section div.data-card-item {
  @apply flex flex-row justify-start items-center;
  @apply mt-7;
}

section#data-section div.data-card-item img {
  @apply h-[50px] w-[50px] rounded-2xl mr-3;
}

section#data-section div.data-card-item p {
  @apply sm:text-lg;
}

section#data-section div.data-card-item span.data-card-name {
  @apply font-bold;
}

div.data-card-content {
  @apply w-full;
}

div.data-card-monitor form {
  @apply flex flex-row w-full;
}

div.data-card-monitor input.data-threshold {
  @apply m-1 px-4 py-3 w-full rounded-lg text-sm;
  @apply disabled:opacity-50 disabled:pointer-events-none;
  @apply bg-white border-black focus:border-indigo-500 focus:ring-indigo-500;
}

div.data-card-monitor input.data-interval {
  @apply m-1 px-4 py-3 w-full rounded-lg text-sm;
  @apply disabled:opacity-50 disabled:pointer-events-none;
  @apply bg-white border-black focus:border-indigo-500 focus:ring-indigo-500;
}

div.data-card-monitor button.save-monitor {
  @apply m-1 px-4 py-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg;
  @apply disabled:opacity-50 disabled:pointer-events-none;
  @apply bg-indigo-500 text-white hover:bg-indigo-600 focus:outline-hidden focus:bg-indigo-600;
}

section#data-section div#empty-cards-placeholder {
  @apply flex flex-col justify-center items-center;
  @apply h-full;
}

div#empty-cards-placeholder p {
  @apply text-xl p-3 sm:p-0 font-extralight text-justify;
}

div#empty-cards-placeholder span.empty-title {
  @apply text-indigo-600 text-2xl sm:text-4xl font-bold;
}

div#empty-cards-placeholder span.empty-footer {
  @apply mt-1 ml-0 sm:ml-80 font-light text-xs;
}

/***************************** NOTIFIER PAGE ********************************/

section#notifiers-section {
  @apply w-full h-full;
}

section#notifiers-section div.notifier-card {
  @apply bg-gray-200 p-5 rounded-xl shadow-lg relative;
}

section#notifiers-section h3.notifier-card-title {
  @apply text-center text-lg sm:text-2xl uppercase font-bold my-2;
}

section#notifiers-section div.notifier-card-items {
  @apply my-2;
}

/***************************** PAGE NOT FOUND *******************************/

div.page-not-found {
  @apply flex flex-col w-full justify-center items-center;
}

div.page-not-found p {
  @apply text-center text-xl m-5;
}

div.page-not-found span {
  @apply block p-0 m-0;
  @apply text-9xl font-semibold;
}

div.page-not-found a {
  @apply text-sm font-bold underline text-indigo-600;
}

/***************************** BUILDING BLOCKS ******************************/

div.toggle {
  @apply flex flex-col items-center justify-end;
}

div.toggle span.toggle-label {
  @apply text-[11px];
}

div.toggle label.toggle-root {
  @apply relative inline-block w-13 h-7 cursor-pointer;
}

div.toggle span.toggle-background {
  @apply absolute inset-0 rounded-full;
  @apply transition-colors duration-500 ease-in-out;
  @apply peer-disabled:opacity-50 peer-disabled:pointer-events-none;
  @apply bg-gray-200 peer-checked:bg-indigo-600 dark:bg-neutral-700 dark:peer-checked:bg-indigo-500;
}

div.toggle span.toggle-button {
  @apply absolute top-1/2 start-0.5 -translate-y-1/2 size-6 rounded-full shadow-xs;
  @apply transition-transform duration-200 ease-in-out;
  @apply peer-checked:translate-x-full;
  @apply bg-white dark:bg-neutral-400 dark:peer-checked:bg-white;
}

div.toggle span.toggle-icon-left {
  @apply absolute flex justify-center items-center size-5 start-1 top-1/2 -translate-y-1/2;
  @apply peer-checked:text-white text-gray-500 dark:text-neutral-500 transition-colors duration-500;
}

div.toggle span.toggle-icon-right {
  @apply absolute flex justify-center items-center size-5 end-1 top-1/2 -translate-y-1/2;
  @apply peer-checked:text-indigo-600 text-gray-500 dark:text-neutral-500 transition-colors duration-500;
}

div.toggle span svg {
  @apply shrink-0 size-3;
}

